--- a/kod penceresi ag rengde.css
+++ b/kod penceresi ag rengde.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+/* CSS Document */
 body {
   background:#eee;
   padding:0;
@@ -11,7 +13,7 @@ body {
 
 /* CSS Simple Pre Code */
 pre {
-    background: #fff;
+    background: #333;
     white-space: pre;
     word-wrap: break-word;
     overflow: auto;
@@ -19,20 +21,19 @@ pre {
 
 pre.code {
     margin: 20px 25px;
-    border: 1px solid #d9d9d9;
-    border-radius: 2px;
+    border-radius: 4px;
+    border: 1px solid #292929;
     position: relative;
-    box-shadow: 0 1px 1px rgba(0,0,0,.08);
 }
 
 pre.code label {
     font-family: sans-serif;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 13px;
-    color: #444;
+    color: #ddd;
     position: absolute;
     left: 1px;
-    top: 16px;
+    top: 15px;
     text-align: center;
     width: 60px;
     -webkit-user-select: none;
@@ -46,11 +47,11 @@ pre.code code {
     display: block;
     margin: 0 0 0 60px;
     padding: 15px 16px 14px;
-    border-left: 1px solid #d9d9d9;
+    border-left: 1px solid #555;
     overflow-x: auto;
     font-size: 13px;
     line-height: 19px;
-    color: #444;
+    color: #ddd;
 }
 
 pre::after {
@@ -62,7 +63,7 @@ pre::after {
     right: 18px;
     top: 14px;
     font-size: 12px;
-    color: #aaa;
+    color: #ddd;
     line-height: 20px;
     overflow: hidden;
     -webkit-backface-visibility: hidden;
@@ -75,17 +76,17 @@ pre:hover::after {
 }
 
 pre.code-css code {
-    color: #0288d1;
+    color: #91a7ff;
 }
 
 pre.code-html code {
-    color: #558b2f;
+    color: #aed581;
 }
 
 pre.code-javascript code {
-    color: #f57c00;
+    color: #ffa726;
 }
 
 pre.code-jquery code {
-    color: #78909c;
+    color: #4dd0e1;
 }
